--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Jetzt online spielen"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" sizes="96x96">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
